@@ -1,7 +1,8 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.2'
+	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
 }
 
 group = 'com.demo'
@@ -11,6 +12,10 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+}
+
+jacoco {
+	toolVersion = "0.8.11"
 }
 
 configurations {
@@ -29,12 +34,60 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core:5.11.0'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'com.h2database:h2'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+	finalizedBy jacocoTestReport
+}
+//JACOCO
+
+def excludedPaths = [
+		'com/demo/security/persistence/**',
+		'com/demo/security/presentation/dto/**',
+		'com/demo/security/presentation/exceptions/**',
+		'com/demo/security/presentation/handlers/**',
+		'com/demo/security/configuration/**',
+		'com/demo/security/SecurityApplication.class',
+		'com/demo/security/*Application.class'
+]
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = true
+		html.required = true
+	}
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: excludedPaths)
+		}))
+	}
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			element = 'CLASS'
+			// Convertir las rutas de archivo a patrones de paquete para verificación
+			excludes = excludedPaths.collect {
+				it.replace('/', '.')
+						.replace('/**', '.*')
+						.replace('*.class', '')
+			}
+			limit {
+				counter = 'LINE'
+				minimum = 0.8 // COVERAGE MAX
+			}
+		}
+	}
 }
